Fixed footer not being long enough on mobile

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -70,14 +70,14 @@ body {
   text-align: left;
   background-color: #fff;
   padding-top: 60px;
-  padding-bottom: 150px;
+  padding-bottom: 200px;
 }
 
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 150px; /* Set the fixed height of the footer here */
+  height: 200px; /* Set the fixed height of the footer here */
   line-height: 60px; /* Vertically center the text there */
   background-color: #1d1d1d;
   color: #fff;
